[tool.poetry]
name = "flask-baggage"
version = "0.1.0"
description = ""
authors = ["Jean-Mark Wright <jeanmark.wright@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ddtrace = "^3.8.0"
flask = "^3.1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
